# Bonk

./: .env.example  .gitignore  AGENTS.md  AutoTag.md  CHANGELOG.md  FIND_TAGS_ALBUM_ART.md  FORMAT_CONVERSION_GUIDE.md  Key Shortcuts.md  QUICKSTART.md  README.md  SAFETY_WARNING.md  UI_STANDARDS.md  check_corrupted_entries.py  check_rekordbox.sh  check_track_count.py  check_track_details.py  debug_smartlist.py  electron.js  example-rekordbox.xml  find_corrupted_tracks.py  fix_corrupted_entries.py  index.html  package.json  preload.js  rebuild_playlist_table.py  rekordbox_bridge.py  rekordbox_export.xml  repair_database.sh  requirements.txt  safe_export.sh  tsconfig.node.json  vite.config.ts
docs/: ARCHITECTURE.md  AUDIO_PLAYER.md  BACKUP_GUIDE.md  Custom Tags.md  FEATURE_ROADMAP.md  FOLDER_IMPORT_KEY_DETECTION.md  KEY_DETECTION.md  POPM_RATING_STATUS.md  POPM_RATING_SYSTEM.md  PROJECT_CHANGES_NOTES.md  REKORDBOX_DB_SETUP.md  UX_GUIDE.md
electron/: main.ts  preload.ts
native-audio/: .gitignore  Cargo.toml  README.md  build.sh  index.js  napi.config.json
native-audio/src/: lib.rs
patches/: rekordbox_tags_sync.patch
src/: App.tsx  WaveForm.md  libsOneTagger.md
src/components/: AudioFeaturesWizard.css  AudioFeaturesWizard.tsx  AudioPlayer.css  AudioPlayer.tsx  AuditionErrorBoundary.tsx  AutoTagWizard.css  AutoTagWizard.tsx  BatchGenreUpdateModal.tsx  BatchRenameModal.tsx  BatchTagUpdateModal.tsx  CanvasWaveform copy.tsx  CanvasWaveform.tsx  ColumnSelector.css  ColumnSelector.tsx  ConfirmProvider.tsx  DeleteTracksModal.tsx  DuplicateDetectionModal.tsx  Header.tsx  (+33 more)
(+24 files in other folders)
