[package]
name = "native-audio"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi8", "tokio_rt"] }
napi-derive = "3"
rodio = { version = "0.18", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["rt", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
napi-build = "2"
